split tenants in db
