# owner-frontend/api/models/index.ts
@@ -3,5 +3,5 @@
 export * from './Customisation';
 export * from './ErrorResponse';
 export * from './GmService';
+export * from './GmTenant';
 export * from './Services';
-export * from './Tenant';
